More RMS suggested updates.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -77,7 +77,7 @@ GCC.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-haifa</tt> -- Enable the new Haifa instruction scheduler
   in the compiler; the new scheduler can significantly improve code on some
   targets.
-  <br>For egcs-1.0.x releases <tt>--disable-haifa</tt> is the default on all
+  <br>For EGCS 1.0.x releases <tt>--disable-haifa</tt> is the default on all
   platforms except the HPPA.
   <br>For newer releases <tt>--disable-haifa</tt> is the default on all
   platforms except the alpha, hppa, powerpc, rs6000, SPARC and m32r.
@@ -122,7 +122,7 @@ GCC.  A partial list of supported <tt>options</tt>:
 
   <li> <tt>--without-fast-fixincludes</tt> -- Specify that the old, slower
   method of fixing the system header files should be used. 
-  egcs-1.1.x and older releases default to the slow version. GCC 2.95 and
+  EGCS 1.1.x and older releases default to the slow version. GCC 2.95 and
   newer releases will default to the fast version.
 
   <li> <tt>--enable-version-specific-runtime-libs</tt> -- Specify that runtime
@@ -144,7 +144,7 @@ GCC.  A partial list of supported <tt>options</tt>:
   </tt><br>
   Currently, you can use any of the following: <tt>CHILL</tt>, <tt>c++</tt>,
   <tt>f77</tt>, <tt>java</tt> and <tt>objc</tt>. Please note, that this switch
-  does not work with egcs-1.1.2 or older versions of egcs.  It will be supported
+  does not work with EGCS 1.1.2 or older versions of egcs.  It will be supported
   in GCC 2.95 and newer version.<br>
   If you do not pass this flag, all languages available in the <tt>gcc</tt> sub-tree
   will be configured.  Re-defining LANGUAGES when calling <tt>make bootstrap</tt>
