Use full http paths for cgi scripts so that web page mirrors can run cgi code.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -16,7 +16,7 @@ available read-only to the public at large.
 (including released) or our <a href="#wwwdocs">web pages</a>.
 
 <p>In addition you can <a
-href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/">browse our CVS
+href="http://egcs.cygnus.com/cgi-bin/cvsweb.cgi/egcs/">browse our CVS
 history online</a>.
 
 
