--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -192,7 +192,7 @@ before.</p>
 The manual can also be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if
 the GNU <tt>info</tt> program is installed on your system by `<tt>info --node
 "(gcc)Bugs"</tt>'. Or see the file
-<a href="/cgi-bin/cvsweb.cgi/~checkout~/egcs/gcc/BUGS?content-type=text/plain&only_with_tag=HEAD">BUGS</a>
+<a href="http://egcs.cygnus.com/cgi-bin/cvsweb.cgi/~checkout~/egcs/gcc/BUGS?content-type=text/plain&only_with_tag=HEAD">BUGS</a>
 included with the GCC source code.</p>
 
 <p>Before you report a bug for the <em>C++ compiler</em>, please check
