--- a/htdocs/searchbox.html
+++ b/htdocs/searchbox.html
@@ -3,7 +3,7 @@ This search will allow you to search the contents of
 all the publicly available WWW documents at this site.
 <br>
 <p>
-<form method="post" action="/cgi-bin/htsearch">
+<form method="post" action="http://egcs.cygnus.com/cgi-bin/htsearch">
 <font size=-1>
 
 Match: <select name="method">
