goof.com and its mirrors only have snapshots.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -13,7 +13,7 @@ if you are mirroring the egcs pages so we can note it here!
 
 <ul>
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a>
-<li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
+<li>US (snapshots only): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
 <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
@@ -79,14 +79,14 @@ off of them.  Thanks to Marc Lehmann for mentioning this! Only the latest versio
 of the snapshots are mirrored here.
 
 <UL>
-<LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM</A>, thanks to <A HREF="http://www.goof.com/~mmead/">Matthew C. Mead</A>!<BR>
-<LI><A HREF="ftp://mirror.aarnet.edu.au/pub/pcg/egcs/">AUSTRALIA: aarnet.edu</A>, thanks to <A HREF="mailto:<mirror@mirror.aarnet.edu.au>">Paul Young / Jason Andrade</A>!<BR>
-<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
-<LI><A HREF="ftp://euler.mat.univ.szczecin.pl/pub/Linux/pgcc/egcs/">POLAND: euler.mat.univ.szczecin.pl</A>, thanks to <A HREF="mailto:mkorz@euler.mat.univ.szczecin.pl">Marcin Korzonek</A>!<BR>
-<LI><A HREF="ftp://ftp.fu-berlin.de/unix/languages/pgcc/egcs/">GERMANY: ftp.fu-berlin.de (FU Berlin)</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!<BR>
-<LI><A HREF="ftp://ftp.pmi.saitama-med.ac.jp/pub/pcg/egcs/">JAPAN: ftp.pmi.saitama-med.ac.jp</A>, thanks to <A HREF="mailto:raraki@saitama-med.ac.jp">Ryuichiro Araki</A>!<BR>
-<LI><A HREF="ftp://ftp.u-aizu.ac.jp/pub/lang/C/pcg/egcs/">JAPAN: ftp.u-aizu.ac.jp (Aizu University)</A>, thanks to <A HREF="mailto:takafumi@u-aizu.ac.jp">Takafumi Hayashi</A>!<BR>
-<LI><A HREF="ftp://ftp.hitachi-sk.co.jp/pub/pentium-gcc/egcs/">JAPAN: ftp.hitachi-sk.co.jp (Hitachi-Soft)</A>, thanks to <A HREF="mailto:miya@aqu.hitachi-sk.co.jp">Yasuki Miyazaki</A>!<BR>
+<LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM (snapshots only)</A>, thanks to <A HREF="http://www.goof.com/~mmead/">Matthew C. Mead</A>!<BR>
+<LI><A HREF="ftp://mirror.aarnet.edu.au/pub/pcg/egcs/">AUSTRALIA: aarnet.edu (snapshots only)</A>, thanks to <A HREF="mailto:<mirror@mirror.aarnet.edu.au>">Paul Young / Jason Andrade</A>!<BR>
+<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
+<LI><A HREF="ftp://euler.mat.univ.szczecin.pl/pub/Linux/pgcc/egcs/">POLAND: euler.mat.univ.szczecin.pl (snapshots only)</A>, thanks to <A HREF="mailto:mkorz@euler.mat.univ.szczecin.pl">Marcin Korzonek</A>!<BR>
+<LI><A HREF="ftp://ftp.fu-berlin.de/unix/languages/pgcc/egcs/">GERMANY: ftp.fu-berlin.de (FU Berlin) (snapshots only)</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!<BR>
+<LI><A HREF="ftp://ftp.pmi.saitama-med.ac.jp/pub/pcg/egcs/">JAPAN: ftp.pmi.saitama-med.ac.jp (snapshots only)</A>, thanks to <A HREF="mailto:raraki@saitama-med.ac.jp">Ryuichiro Araki</A>!<BR>
+<LI><A HREF="ftp://ftp.u-aizu.ac.jp/pub/lang/C/pcg/egcs/">JAPAN: ftp.u-aizu.ac.jp (Aizu University) (snapshots only)</A>, thanks to <A HREF="mailto:takafumi@u-aizu.ac.jp">Takafumi Hayashi</A>!<BR>
+<LI><A HREF="ftp://ftp.hitachi-sk.co.jp/pub/pentium-gcc/egcs/">JAPAN: ftp.hitachi-sk.co.jp (Hitachi-Soft) (snapshots only)</A>, thanks to <A HREF="mailto:miya@aqu.hitachi-sk.co.jp">Yasuki Miyazaki</A>!<BR>
 <!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR> -->
 <LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/pgcc/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www.minet.net/~olive/int/">Olivier Tharan</A>!<BR>
 </UL>
@@ -100,7 +100,7 @@ where the mirror is located.
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<i>Last modified on July 13, 1999.</i>
+<i>Last modified on July 30, 1999.</i>
 
 </body>
 </html>
