--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -1,54 +1,39 @@
 <html>
 <head>
-<title>egcs ftp mirror sites</title>
+<title>GCC ftp mirror sites</title>
 </head>
 <body>
-<h1 align="center">egcs mirror sites</h1>
+<h1 align="center">GCC mirror sites</h1>
 
 <h2><a name="mirrors">MIRROR LISTS</a></h2>
 
-<p>These sites mirror the egcs ftp directory directly.  The official
-egcs.cygnus.com server is in California in the US.  Please let us know
-if you are mirroring the egcs pages so we can note it here!
+<p>These sites mirror the GCC ftp directory directly.  The official
+gcc.gnu.org server is in California in the US.  Please let us know
+if you are mirroring the GCC pages so we can note it here!
 
 <ul>
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a>
-<li>US (snapshots only): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
-<li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
-<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
-<li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
-<li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs">ftp.irisa.fr</a>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
 <LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR>
-<li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
 <LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/egcs/">ftp.mpi-sb.mpg.de</a>
 <LI>Germany: <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
-<LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs">ftp.task.gda.pl</a>
-<LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
-<LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
-<LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
-<LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <LI>Athens, Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
-<LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
 <LI>Tokyo, Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
 <LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a>
-<li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a>
-<li>Japan: <a href="ftp://ftp.telewaynet.ad.jp/pub/lang/egcs">ftp.telewaynet.ad.jp</a>
-<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
 <li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a>
 <li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
 <li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a>
@@ -56,21 +41,18 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Japan (Tokyo): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>
 <li>Japan: <a href="ftp://ring.jah.ne.jp/pub/lang/egcs">ring.jah.ne.jp</a>
 <li>Japan: <a href="ftp://ring.astem.or.jp/pub/lang/egcs">ring.astem.or.jp</a>
-<!-- <li>Japan: <a href="ftp://ring.saitama-u.ac.jp/pub/lang/egcs">ring.saitama-u.ac.jp</a> -->
+<li>Japan: <a href="ftp://ring.saitama-u.ac.jp/pub/lang/egcs">ring.saitama-u.ac.jp</a>
 <li>Japan: <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a>
 <li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a>
 <li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a>
-<!-- <li>Japan: <a href="ftp://sysg.kek.jp/cygnus/egcs">sysg.kek.jp</a> -->
+<li>Japan: <a href="ftp://sysg.kek.jp/cygnus/egcs">sysg.kek.jp</a>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs">ftp.eos.hokudai.ac.jp</a>
-<li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub">ftp.sun.ac.za</a>
 
-<!-- <LI>Taejon, Korea: <A HREF="ftp://cair-archive.kaist.ac.kr/pub/gnu/egcs">cair-archive.kaist.ac.kr</a>, thanks to <a href="mailto:ahmls@nmsvr.chosun.com">Ho-sun Lee</a>! -->
 <li>Finland (no snapshots): <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
-<li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a>
 <li>Hsin-Chu, Taiwan: <a href="ftp://ftp.cis.nctu.edu.tw/Languages/egcs">ftp.cis.nctu.edu.tw</a>, thanks to <a href="mailto:help@cis.nctu.edu.tw"> Henry Shieh</a>.
 </ul>
 
@@ -81,26 +63,43 @@ of the snapshots are mirrored here.
 <UL>
 <LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM (snapshots only)</A>, thanks to <A HREF="http://www.goof.com/~mmead/">Matthew C. Mead</A>!<BR>
 <LI><A HREF="ftp://mirror.aarnet.edu.au/pub/pcg/egcs/">AUSTRALIA: aarnet.edu (snapshots only)</A>, thanks to <A HREF="mailto:<mirror@mirror.aarnet.edu.au>">Paul Young / Jason Andrade</A>!<BR>
-<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
 <LI><A HREF="ftp://euler.mat.univ.szczecin.pl/pub/Linux/pgcc/egcs/">POLAND: euler.mat.univ.szczecin.pl (snapshots only)</A>, thanks to <A HREF="mailto:mkorz@euler.mat.univ.szczecin.pl">Marcin Korzonek</A>!<BR>
 <LI><A HREF="ftp://ftp.fu-berlin.de/unix/languages/pgcc/egcs/">GERMANY: ftp.fu-berlin.de (FU Berlin) (snapshots only)</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!<BR>
 <LI><A HREF="ftp://ftp.pmi.saitama-med.ac.jp/pub/pcg/egcs/">JAPAN: ftp.pmi.saitama-med.ac.jp (snapshots only)</A>, thanks to <A HREF="mailto:raraki@saitama-med.ac.jp">Ryuichiro Araki</A>!<BR>
 <LI><A HREF="ftp://ftp.u-aizu.ac.jp/pub/lang/C/pcg/egcs/">JAPAN: ftp.u-aizu.ac.jp (Aizu University) (snapshots only)</A>, thanks to <A HREF="mailto:takafumi@u-aizu.ac.jp">Takafumi Hayashi</A>!<BR>
 <LI><A HREF="ftp://ftp.hitachi-sk.co.jp/pub/pentium-gcc/egcs/">JAPAN: ftp.hitachi-sk.co.jp (Hitachi-Soft) (snapshots only)</A>, thanks to <A HREF="mailto:miya@aqu.hitachi-sk.co.jp">Yasuki Miyazaki</A>!<BR>
-<!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR> -->
-<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/pgcc/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www.minet.net/~olive/int/">Olivier Tharan</A>!<BR>
+<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/pgcc/egcs/">FRANCE: ftp.minet.net (MINET)(snapshots only)</A>, thanks to <A HREF="http://www.minet.net/~olive/int/">Olivier Tharan</A>!<BR>
 </UL>
 
 <p>If you wish to host a new mirror site, please contact
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
-name of the ftp server, the path to the egcs mirror and the country/city
+name of the ftp server, the path to the GC mirror and the country/city
 where the mirror is located.
 
 <hr>
-<p><a href="index.html">Return to the egcs home page</a>
+<p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
 <i>Last modified on July 30, 1999.</i>
 
 </body>
 </html>
+<!-- <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>! -->
+<!-- <LI>Taejon, Korea: <A HREF="ftp://cair-archive.kaist.ac.kr/pub/gnu/egcs">cair-archive.kaist.ac.kr</a>, thanks to <a href="mailto:ahmls@nmsvr.chosun.com">Ho-sun Lee</a>! -->
+<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
+<!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>! -->
+<!-- <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a> !-->
+<!-- <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> !-->
+<!-- <li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a> !-->
+<!-- <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a> !-->
+<!-- <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a> !-->
+<!-- <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a> !-->
+<!-- <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a> !-->
+<!-- <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a> !-->
+<!-- <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a> !-->
+<!-- <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>! !-->
+<!-- <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ftp.telewaynet.ad.jp/pub/lang/egcs">ftp.telewaynet.ad.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a> !-->
+<! --<li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
