Remove ninemoons from active mirror list.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -14,7 +14,6 @@ if you are mirroring the GCC pages so we can note it here!
 <ul>
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
-<li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
@@ -103,3 +102,4 @@ where the mirror is located.
 <!-- <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a> !-->
 <!-- <li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
+<!-- <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a> !-->
