--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -5,8 +5,7 @@
 <body>
 <h1 align="center">GCC 2.95</h1>
 
-<h2> XXX This is a template only.  It will change.</h2>
-<p>July XX, 1999
+<p>July 31, 1999
 
 <p>The GNU project and the GCC/EGCS developers are pleased to announce the
 release of GCC version 2.95.  GCC used to stand for the GNU C Compiler, but
@@ -54,7 +53,7 @@ successful.
 <a href="mailto:gcc@gcc.gnu.org">GCC development mailing list</a>.
 
 <hr>
-<i>Last modified on July 29, 1999.</i>
+<i>Last modified on July 31, 1999.</i>
 
 </body>
 </html>
