--- a/htdocs/gcc-2.95/gcc-2.95.html
+++ b/htdocs/gcc-2.95/gcc-2.95.html
@@ -42,7 +42,7 @@ successful.
 <a href="caveats.html">caveats</a> to using GCC 2.95.
 
 <p> Download GCC 2.95 from the
-<a href="ftp://ftp.gnu.org/pub/gnu/gcc/">GNU FTP server (ftp://ftp.gnu.org</a>
+<a href="ftp://ftp.gnu.org/pub/gnu/gcc/">GNU FTP server (ftp://ftp.gnu.org)</a>
 <br>Download GCC 2.95 from the
 <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">GCC/EGCS FTP server (ftp://go.cygnus.com)</a>
 <br><a href="http://www.gnu.org/order/ftp.html">Find a GNU mirror site</a>
