--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -75,8 +75,7 @@ We want those releases to work well on a variety of native (including
 GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="egcs-1.1/egcs-1.1.2.html">EGCS 1.1.2</a> is the current release.
-<a href="gcc-2.95/gcc-2.95.html">GCC 2.95</a> is the next major release.
+<a href="gcc-2.95/gcc-2.95.html">GCC 2.95</a> is the current release.
 <hr>
 
 
@@ -90,6 +89,11 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>July 31, 1999</b></dt>
+<dd>
+<a href="gcc-2.95/gcc-2.95.html">GCC 2.95 is released</a>.
+</dd>
 
 <dt><b>July 11, 1999</b></dt>
 <dd>
@@ -124,7 +128,7 @@ back end, focusing on better optimization for the Pentium II.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on July 28, 1999.</i></small>
+<small><i>Last modified on July 31, 1999.</i></small>
 </address>
 
 </body>
