--- a/htdocs/timeline.html
+++ b/htdocs/timeline.html
@@ -1,31 +1,34 @@
 <html>
 <head>
-<title>egcs timeline</title>
+<title>GCC/EGSC Timeline</title>
 </head>
 <body>
-The egcs project maintains two kinds of version numbers. one is of the
-form 2.9x.yy and indicates a relationship between gcc2 and egcs; this
-number can be also used to test whether a program is compiled with
-egcs.  Change in the 9x minor number is infrequent; the subminor (yy)
-is increased with every snapshot (roughly every week).
+The egcs project maintained two kinds of version numbers. one was of the
+form 2.9x.yy and indicated the relationship between the GCC sources and
+the EGCS sources.
 <p>
-The other version number counts egcs releases (as compared to
+The other version number identified EGCS releases (as compared to
 development snapshots). So far, there have been releases 1.0.x, and
-1.1.x. The table below gives a relationship between all these numbers.
+1.1.x.
+
+<p> After the April, 1999 merger between GCC and EGCS, only a single version
+number is maintained.
+
 <p>
 <table border>
-<tr><th>Release</th><th>Version</th><th>Release date<th></tr>
-<tr><td>1.0.0</td><td>2.90.21</td><td>December 3, 1997</td></tr>
-<tr><td>1.0.1</td><td>2.90.23</td><td>January 6, 1998</td></tr>
-<tr><td>1.0.2</td><td>2.90.27</td><td>March 16, 1998</td></tr>
-<tr><td>1.0.3</td><td>2.90.29</td><td>May 15, 1998</td></tr>
-<tr><td>1.1.0</td><td>2.91.57</td><td>September 3, 1998</td></tr>
-<tr><td>1.1.1</td><td>2.91.60</td><td>December 1, 1998</td></tr>
-<tr><td>1.1.2</td><td>2.91.66</td><td>March 15, 1999</td></tr>
+<tr><th>Release Name</th><th>Version number</th><th>Release date<th></tr>
+<tr><td>EGCS 1.0.0</td><td>2.90.21</td><td>December 3, 1997</td></tr>
+<tr><td>EGCS 1.0.1</td><td>2.90.23</td><td>January 6, 1998</td></tr>
+<tr><td>EGCS 1.0.2</td><td>2.90.27</td><td>March 16, 1998</td></tr>
+<tr><td>EGCS 1.0.3</td><td>2.90.29</td><td>May 15, 1998</td></tr>
+<tr><td>EGCS 1.1.0</td><td>2.91.57</td><td>September 3, 1998</td></tr>
+<tr><td>EGCS 1.1.1</td><td>2.91.60</td><td>December 1, 1998</td></tr>
+<tr><td>EGCS 1.1.2</td><td>2.91.66</td><td>March 15, 1999</td></tr>
+<tr><td>GCC 2.95</td><td>2.95</td><td>July 31, 1999</td></tr>
 </table>
 <hr>
 <a href="index.html">Return to the EGCS home page</a> &nbsp;
-<p><i>Last modified:  March 15, 1999</i>
+<p><i>Last modified:  July 31, 1999</i>
 
 </body>
 </html>
