Initial build reports.

--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -5,9 +5,18 @@
 <body>
 <h1 align="center">Build status for GCC 2.95</h1>
 
+<p><b>i486-pc-linux-gnulibc1</b><br>
+Successful
+
+<p><b>i686-pc-linux-gnu</b><br>
+Successful
+
+<p><b>sparc-sun-solaris.2.5.1</b><br>
+Successful
+
 <hr>
 <p>
-<i>Last modified on July 28, 1999.</i>
+<i>Last modified on July 31, 1999.</i>
 
 </body>
 </html>
