Add some new entries.

--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -5,6 +5,9 @@
 <body>
 <h1 align="center">Build status for GCC 2.95</h1>
 
+<p><b>alphaev56-dec-osf4.0d</b><br>
+Successful
+
 <p><b>i486-pc-linux-gnulibc1</b><br>
 Successful
 
@@ -12,6 +15,9 @@ Successful
 Successful
 
 <p><b>sparc-sun-solaris.2.5.1</b><br>
+Successful
+
+<p><b>sparc-sun-solaris.2.6</b><br>
 Successful
 
 <hr>
