More new entries.

--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -8,7 +8,19 @@
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
+<p><b>alphapca56-unknown-linux-gnu</b><br>
+Successful
+
+<p><b>i386-unknown-openbsd2.5</b><br>
+Successful
+
+<p><b>i386-pc-solaris2.7</b><br>
+Successful
+
 <p><b>i486-pc-linux-gnulibc1</b><br>
+Successful
+
+<p><b>i586-pc-linux-gnu</b><br>
 Successful
 
 <p><b>i686-pc-linux-gnu</b><br>
@@ -22,7 +34,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on July 31, 1999.</i>
+<i>Last modified on August 1, 1999.</i>
 
 </body>
 </html>
