--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -15,6 +15,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
+<li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> 
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs">ftp.irisa.fr</a>
@@ -27,6 +28,8 @@ if you are mirroring the GCC pages so we can note it here!
 <LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/egcs/">ftp.mpi-sb.mpg.de</a>
 <LI>Germany: <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs">ftp.task.gda.pl</a>
+<LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
+<LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <LI>Athens, Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
@@ -79,7 +82,7 @@ where the mirror is located.
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on July 30, 1999.</i>
+<i>Last modified on August 1, 1999.</i>
 
 </body>
 </html>
@@ -88,17 +91,13 @@ where the mirror is located.
 <!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
 <!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>! -->
 <!-- <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a> !-->
-<!-- <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> !-->
 <!-- <li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a> !-->
 <!-- <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a> !-->
 <!-- <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a> !-->
-<!-- <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a> !-->
-<!-- <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a> !-->
 <!-- <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a> !-->
 <!-- <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a> !-->
 <!-- <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>! !-->
 <!-- <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ftp.telewaynet.ad.jp/pub/lang/egcs">ftp.telewaynet.ad.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a> !-->
 <!-- <li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
