Mention the 2.95 release. Removed credits section; now see THANKS file in distribution.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -10,13 +10,14 @@
 <p>We're developing a complete free software toolkit for developing in
 the Java Language.
 
-<blockquote>
-      <p><b>New</b>: We've released the ``libgcj'' runtime!  Now you
-	can check out both the compiler and runtime and have a fully
-	working system.  Read <a href="libgcj.html">the libgcj
-	page</a> for details on downloading and installing the
-	runtime.
-</blockquote>
+    <blockquote>
+      <p><b>New</b>: We've released version <a
+	href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.tar.gz">2.95
+	  of the ``libgcj'' runtime</a>!  This version corresponds with
+	the <a
+	  href="http://egcs.cygnus.com/ml/gcc-announce/1999/msg00008.html">gcc
+	  2.95 release</a>.
+    </blockquote>
 
 <h2>Mailing lists</h2>
 
@@ -71,23 +72,6 @@ of these lists:
 
 <p>If you have any questions about the mailing lists on this site,
 see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
-
-<h2>Who we are</h2>
-
-<p>A motley collection of ne'er-do-wells, a gang of notorious
-troublemakers, a group of dedicated hackers.  We're:
-
-<ul>
-
- <li> <a href="http://www.cygnus.com/~bothner/">Per Bothner</a> (bothner@cygnus.com)
- <li> <a href="http://www.cygnus.com/~green/">Anthony Green</a> (green@cygnus.com)
- <li> Stu Grossman (grossman@cygnus.com)
- <li> Andrew Haley (aph@cygnus.com)
- <li> Warren Levy (warrenl@cygnus.com)
- <li> <a href="http://www.cygnus.com/~apbianco/">Alexandre Petit-Bianco</a> (apbianco@cygnus.com)
- <li> <a href="http://www.cygnus.com/~tromey/">Tom Tromey</a> (tromey@cygnus.com)
-
-</ul>
 
 <h2>Documentation</h2>
 
