--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,6 +90,12 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>August 2, 1999</b></dt>
+<dd>
+Mumit Khan has 
+<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/"pre-built gcc-2.95 binary packages for Windows platforms</a>.
+</dd>
+
 <dt><b>July 31, 1999</b></dt>
 <dd>
 <a href="gcc-2.95/gcc-2.95.html">GCC 2.95 is released</a>.
@@ -128,7 +134,7 @@ back end, focusing on better optimization for the Pentium II.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on July 31, 1999.</i></small>
+<small><i>Last modified on August 2, 1999.</i></small>
 </address>
 
 </body>
