--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -93,7 +93,7 @@ maintain and improve quality.
 <dt><b>August 2, 1999</b></dt>
 <dd>
 Mumit Khan has 
-<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/"pre-built gcc-2.95 binary packages for Windows platforms</a>.
+<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">pre-built gcc-2.95 binary packages for Windows platforms</a>.
 </dd>
 
 <dt><b>July 31, 1999</b></dt>
