Updated info about gcj front end

--- a/htdocs/java/gcj.html
+++ b/htdocs/java/gcj.html
@@ -23,10 +23,10 @@ href="http://egcs.cygnus.com/">EGCS</a> project.
 
 <dt><tt>gcj</tt></dt>
 <dd>
-   A front end to gcc which is able to read Java ``.class'' files
-   and generate assembly code.  gcj is also a convenient front end to
-   jvgenmain.  Work on a parser to read ``.java'' files is in progress;
-   the preliminary code is also available here.
+   A front end to gcc which is able to read Java ``.class'' files and
+   generate assembly code.  gcj is also a convenient front end to
+   jvgenmain.  Finally, gcj can read ``.java'' files and generate
+   assembly code or Java bytecode.
 </dd>
 
 <dt><tt>jvgenmain</tt></dt>
