--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -14,6 +14,9 @@ Successful
 <p><b>i386-unknown-openbsd2.5</b><br>
 Successful
 
+<p><b>i386-pc-sysv4.2uw2.1.2</b><br>
+Successful
+
 <p><b>i386-pc-solaris2.7</b><br>
 Successful
 
