--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -17,6 +17,9 @@ Successful
 <p><b>i386-pc-sysv4.2uw2.1.2</b><br>
 Successful
 
+<p><b>i386-pc-solaris2.6</b><br>
+Successful
+
 <p><b>i386-pc-solaris2.7</b><br>
 Successful
 
