--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -11,6 +11,12 @@ Successful
 <p><b>alphapca56-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>(hppa1.1-hp-hpux10.20</b><br>
+Successful
+
+<p><b>(hppa2.0-hp-hpux11.00</b><br>
+Successful
+
 <p><b>i386-unknown-openbsd2.5</b><br>
 Successful
 
@@ -35,6 +41,12 @@ Successful
 <p><b>mips-sgi-irix6.2</b><br>
 Successful
 
+<p><b>powerpc-ibm-aix4.3.2.0</b><br>
+Successful
+
+<p><b>rs6000-ibm-aix4.1.5.0</b><br>
+Successful
+
 <p><b>sparc-sun-solaris2.5.1</b><br>
 Successful
 
@@ -49,7 +61,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 2, 1999.</i>
+<i>Last modified on August 3, 1999.</i>
 
 </body>
 </html>
