--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -11,10 +11,16 @@ Successful
 <p><b>alphapca56-unknown-linux-gnu</b><br>
 Successful
 
-<p><b>(hppa1.1-hp-hpux10.20</b><br>
+<p><b>alphaev56-unknown-linux-gnu</b><br>
 Successful
 
-<p><b>(hppa2.0-hp-hpux11.00</b><br>
+<p><b>hppa1.1-hp-hpux10.20</b><br>
+Successful
+
+<p><b>hppa2.0-hp-hpux10.20</b><br>
+Successful
+
+<p><b>hppa2.0-hp-hpux11.00</b><br>
 Successful
 
 <p><b>i386-unknown-openbsd2.5</b><br>
@@ -41,7 +47,13 @@ Successful
 <p><b>mips-sgi-irix6.2</b><br>
 Successful
 
+<p><b>mips-sgi-irix6.5</b><br>
+Successful
+
 <p><b>powerpc-ibm-aix4.3.2.0</b><br>
+Successful
+
+<p><b>rs6000-ibm-aix4.2.1.0</b><br>
 Successful
 
 <p><b>rs6000-ibm-aix4.1.5.0</b><br>
@@ -61,7 +73,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 3, 1999.</i>
+<i>Last modified on August 4, 1999.</i>
 
 </body>
 </html>
