--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -23,6 +23,9 @@ Successful
 <p><b>hppa2.0-hp-hpux11.00</b><br>
 Successful
 
+<p><b>hppa2.0w-hp-hpux11.00</b><br>
+Successful
+
 <p><b>i386-unknown-openbsd2.5</b><br>
 Successful
 
