Note libgcj-2.95 release and new libstdc++-v3 snapshot.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -1,14 +1,33 @@
 <html>
 <head>
-<title>egcs project news and announcements</title>
+<title>GCC news and announcements</title>
 </head>
 <body>
-<h1 align="center">egcs project news and announcements</h1>
+<h1 align="center">GCC news and announcements</h1>
 
-<p>More current news items can be found on the <a href="index.html">egcs
+<p>More current news items can be found on the <a href="index.html">GCC
 home page</a>.
 
 <dl>
+
+<dt><b>July 11, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated support for a generic i386-elf target.
+<small>(Note that this will not be included in gcc 2.95.)</small>
+</dd>
+
+<dt><b>June 29, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated hpux11 support.
+<small>(Note that this will not be included in gcc 2.95.)</small>
+</dd>
+
+<dt><b>June 15, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated a major rewrite of the Intel IA-32
+back end, focusing on better optimization for the Pentium II.
+<small>(Note that this will not be included in gcc 2.95.)</small>
+</dd>
 
 <dt><b>May 27, 1999</b></dt>
 <dd>
@@ -328,7 +347,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<i>Last modified on July 12, 1999.</i>
+<i>Last modified on August 4, 1999.</i>
 
 </body>
 </html>
