Minor gcc/egcs merger fixes

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -203,7 +203,8 @@ to the current release first.</p>
 <p>In short, if gcc says <tt>Internal compiler error</tt> (or any
 other error that you'd like us to be able to reproduce, for that
 matter), please mail a bug report to <a
-href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a> including:</p>
+href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>or
+<a href="mailto:bug-gcc@gnu.org"bug-gcc@gnu.org</a> including:</p>
 
 <ul>
   <li>The GCC version</li>
@@ -1021,7 +1022,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  July 28, 1999</i></p>
+<p><i>Last modified:  August 4, 1999</i></p>
 
 </body>
 </html>
