--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -50,6 +50,9 @@ Successful
 <p><b>i686-pc-linux-gnu</b><br>
 Successful
 
+<p><b>i686-pc-linux-gnulibc1</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.2</b><br>
 Successful
 
@@ -63,6 +66,9 @@ Successful
 Successful
 
 <p><b>rs6000-ibm-aix4.1.5.0</b><br>
+Successful
+
+<p><b>rs6000-ibm-aix4.3.2.0</b><br>
 Successful
 
 <p><b>sparc-sun-solaris2.5.1</b><br>
@@ -79,7 +85,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 4, 1999.</i>
+<i>Last modified on August 6, 1999.</i>
 
 </body>
 </html>
