Fix bad html anchor in How to report bugs

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -203,8 +203,8 @@ to the current release first.</p>
 <p>In short, if gcc says <tt>Internal compiler error</tt> (or any
 other error that you'd like us to be able to reproduce, for that
 matter), please mail a bug report to <a
-href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>or
-<a href="mailto:bug-gcc@gnu.org"bug-gcc@gnu.org</a> including:</p>
+href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a> or
+<a href="mailto:bug-gcc@gnu.org">bug-gcc@gnu.org</a> including:</p>
 
 <ul>
   <li>The GCC version</li>
