--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -5,6 +5,9 @@
 <body>
 <h1 align="center">Build status for GCC 2.95</h1>
 
+<p><b>alpha-dec-osf4.0f</b><br>
+Successful
+
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
@@ -53,6 +56,9 @@ Successful
 <p><b>i686-pc-linux-gnulibc1</b><br>
 Successful
 
+<p><b>mips-dec-ultrix4.4</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.2</b><br>
 Successful
 
@@ -81,6 +87,9 @@ Successful
 Successful
 
 <p><b>sparc-sun-sunos4.1.4</b><br>
+Successful
+
+<p><b>sparc-unknown-linux-gnu</b><br>
 Successful
 
 <hr>
