--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -29,6 +29,9 @@ Successful
 <p><b>hppa2.0w-hp-hpux11.00</b><br>
 Successful
 
+<p><b>i386-unknown-freebsdelf</b><br>
+Successful
+
 <p><b>i386-unknown-openbsd2.5</b><br>
 Successful
 
@@ -94,7 +97,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 6, 1999.</i>
+<i>Last modified on August 10, 1999.</i>
 
 </body>
 </html>
