--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -8,6 +8,9 @@
 <p><b>alpha-dec-osf4.0f</b><br>
 Successful
 
+<p><b>alphaev5-dec-osf4.0d</b><br>
+Successful
+
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
@@ -97,7 +100,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 10, 1999.</i>
+<i>Last modified on August 12, 1999.</i>
 
 </body>
 </html>
