Add Toy Language reference.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -20,6 +20,8 @@
   Closures for C++</a> by Thomas M. Breuel, on the design and
   implementation of nested functions in GCC.
 
+  <li><a href="http://members.wri.com/johnnyb/compilers/">A Toy Example Language</a> by Jonathan Bartlett &lt;<a href="mailto:johnnyb@wolfram.com">johnnyb@wolfram.com</a>&gt;.
+
 </ul>
 
 
