Change egcs to GCC in a few places.

--- a/htdocs/java/FAQ.html
+++ b/htdocs/java/FAQ.html
@@ -19,7 +19,7 @@
 
       <dt>How can I contribute to libgcj?</dt>
       <dd>You can send simple bug fixes in as patches.  Please follow
-	the <a href="http://egcs.cygnus.com/contribute.html">egcs guidelines
+	the <a href="http://egcs.cygnus.com/contribute.html">GCC guidelines
 	for submitting patches</a>.
 	For more complex changes, you must sign copyright over to
 	Cygnus.  The forms for doing this are not yet available, but
@@ -30,17 +30,9 @@
 	4.18</a> includes support for debugging gcj-compiled Java
 	programs.</dd>
 
-      <dt>I've downloaded egcs, but I don't see gcj.  Where is it?</dt>
-      <dd>Although gcj has been in the egcs cvs repository for some time
-	now, it has not appeared in any official releases.  It will
-	be included in the coming 1.2 release.  Until then you will
-	need to download one of the recent egcs snapshots (which have
-	always included gcj), or use anonymous cvs.  See 
-	<a href="http://egcs.cygnus.com/">the egcs pages</a> for details.</dd>
-
-      <dt>Why isn't libgcj part of egcs?</dt>
+      <dt>Why isn't libgcj part of GCC?</dt>
       <dd>Copyright problems.  It's possible that libgcj will end up
-	in egcs at some point in the future.</dd>
+	in GCC at some point in the future.</dd>
 
       <dt>Will gcj and libgcj work on my machine?</dt>
       <dd>So far gcj and libgcj have only really been tried on Sparc
