--- a/htdocs/java/libgcj.html
+++ b/htdocs/java/libgcj.html
@@ -9,7 +9,7 @@
     <h2>What is it?</h2>
     
     <p>``libgcj'' is the runtime that goes along with the <a
-    href="gcj.html">gcj</a> front end to egcs.  libgcj includes parts
+    href="gcj.html">gcj</a> front end to GCC.  libgcj includes parts
     of the Java Class Libraries, plus glue to connect the libraries to
     the compiler and the underlying OS.
 
@@ -80,7 +80,7 @@
 	this option must be the same as the value used when building
 	gcj itself.
 	By default, no threads will be used (this is a crummy default,
-	but we just follow egcs here).
+	but we just follow GCC here).
 	The only supported values are ``none'' (for no threads) and
 	``posix'' (for POSIX threads).</dd>
 
