--- a/htdocs/java/gcj.html
+++ b/htdocs/java/gcj.html
@@ -12,7 +12,7 @@
 compile both Java<sup><a href="#javatm">tm</a></sup> source and
 bytecode files.  The compiler can also generate class files.  This new
 front end is integrated into the <a
-href="http://egcs.cygnus.com/">EGCS</a> project.
+href="http://egcs.cygnus.com/">GCC</a> project.
 
 
 <h2>What you get</h2>
@@ -73,10 +73,10 @@ href="http://egcs.cygnus.com/">EGCS</a> project.
 <h2>How to get it</h2>
 
 <p>The new Java front end is very easy to download and install.  Since
-it is it fully integrated into egcs, you can simply follow the <a
-href="http://egcs.cygnus.com/cvs.html">EGCS download and build
-instructions</a>.  Note that you'll want to configure egcs to use the
-Java garbage collector and the appropriate threads system; see <a
+it is it fully integrated into GCC, you can simply follow the <a
+href="http://egcs.cygnus.com/cvs.html">GCC download and build
+instructions</a>.  Note that you'll want to configure GCC to use the
+appropriate threads system; see <a
 href="libgcj.html">the libgcj page</a> for details.
 
 <h2>How to try it</h2>
