Various updates requested by RMS.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -7,7 +7,7 @@
 <h1 align="center">GCC Frequently Asked Questions</h1>
 
 <p>The latest version of this document is always available at <a href="
-http://egcs.cygnus.com/faq.html">http://egcs.cygnus.com/faq.html</a>.</p>
+http://www.gnu.org/software/gcc/faq.html">http://www.gnu.org/software/gcc/faq.html</a>.</p>
 
 <p>This FAQ tries to answer specific questions concerning GCC. For
 general information regarding C resp. C++, please check the 
@@ -109,31 +109,29 @@ was formed in 1997.</p>
 on the gcc2 compiler and appointed the EGCS project as the official GCC
 maintainers.</p>
 
-<p>We are in the process of merging the gcc2 and egcs projects as the
-"GCC Project".  This will take some time, but the net result will be a
-single project which will carry forward GCC development under the ultimate
-control of the
+<p>We are in the process of merging GCC and EGCS, which will take some time.
+The net result will be a single project which will carry forward GCC development
+under the ultimate control of the
 <a href="steering.html">GCC Steering Committee</a>.</p>
 
 <hr>
 <h2><a name="cygnus">What is the relationship between GCC and Cygnus</a></h2>
 
 <p>It is a common mis-conception that Cygnus controls either directly or
-indirectly the GCC project.</p>
+indirectly GCC.</p>
 
 <p>While Cygnus does donate hardware, network connections, code and
-developer time to the GCC project, Cygnus does not control the GCC
-project.</p>
+developer time to GCC development, Cygnus does not control GCC.
 
-<p>Overall control of the GCC project is in the hands of the 
+<p>Overall control of GCC is in the hands of the
 <a href="steering.html">GCC Steering Committee</a>
-which includes people from a variety of different organizations and backgrounds.
-The purpose of the steering committee is to make decisions in the best
-interest of the GCC project and to help ensure that no individual or
-company has control over the project.</p>
+which includes people from a variety of different organizations and
+backgrounds.  The purpose of the steering committee is to make decisions in 
+the best interest of GCC and to help ensure that no individual or company
+has control over the project.</p>
 
-<p>To summarize, Cygnus contributes to the GCC project, but does not exert
-a controlling influence over the project.</p>
+<p>To summarize, Cygnus contributes to GCCproject, but does not exert
+a controlling influence over GCC.</p>
 
 <hr>
 <h2><a name="open-development">What is an open development model?</a></h2>
@@ -1035,7 +1033,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  August 11, 1999</i></p>
+<p><i>Last modified:  August 15, 1999</i></p>
 
 </body>
 </html>
