--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>GCC Project Home Page</title>
+<title>GCC Home Page</title>
 </head>
 
 <body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
@@ -49,7 +49,7 @@
 
 <img src="logo.jpg" alt="" align="right">
 
-<h2>Welcome to the GCC project!</h2>
+<h2>Welcome to the GCC home page!</h2>
 
 <p>If you were looking for the EGCS project, you found the right place;
 GCC development is now reunited and the former egcs team is now
