--- a/htdocs/gcc-2.95/gcc-2.95.1.html
+++ b/htdocs/gcc-2.95/gcc-2.95.1.html
@@ -28,6 +28,10 @@ release.
 	<li> Fix install problem when prefix is overridden on the make install
 	     command.
 	<li> Fix problem with unwanted installation of assert.h on some systems.
+	<li> Fix problem with finding the wrong assembler in a single tree
+	     build.
+	<li> Avoid increasing the known alignment of a register that is
+	     already known to be a pointer.
      </ul>
   <li> Platform specific bugfixes and improvements
     <ul>
@@ -42,15 +46,19 @@ release.
 	<li> Fix -fpic code generation bug for rs6000/ppc svr4 targets.
  	<li> Fix varargs/stdarg code generation bug for rs6000/ppc svr4 targets.
 	<li> Fix weak symbol handling for rs6000/ppc svr4 targets.
+	<li> Fix various problems with 64bit code generation for the rs6000/ppc
+	     port.
         <li> Fix codegen bug which cuased tetex to be mis-compiled on the x86
 	<li> Fix compiler abort in new cfg code exposed by x86 port.
 	<li> Fix out of range array reference in code convert flat
 	     registers to the x87 stacked FP register file.
 	<li> Fix minor vxworks configuration bug
+	<li> Fix return type of bsearch for SunOS 4.x.
     </ul>
   <li> Language & Runtime specific fixes.
     <ul>
 	<li> Various C++ fixes FIXME?
+	<li> Issue a warning for the use of C++ signatures.
 	<li> Fix to prevent shared library version #s from bring truncated
 	     to 1 digit
 	<li> Fix missing std:: in the libstdc++ library.
