--- a/htdocs/gcc-2.95/gcc-2.95.1.html
+++ b/htdocs/gcc-2.95/gcc-2.95.1.html
@@ -57,8 +57,18 @@ release.
     </ul>
   <li> Language & Runtime specific fixes.
     <ul>
-	<li> Various C++ fixes FIXME?
-	<li> Issue a warning for the use of C++ signatures.
+	<li> The G++ signature extension has been deprecated.  It will be
+	     removed in the next major release of G++.  Use of signatures
+	     will result in a warning from the compiler.
+	<li> Several bugs relating to templates and namespaces were fixed.
+	<li> A bug that caused crashes when combining templates with -g
+	     on DWARF1 platforms was fixed.
+	<li> Pointers-to-members, virtual functions, and multiple
+	     inheritance should now work together correctly.
+	<li> Some code-generation bugs relating to function try blocks
+	     were fixed.
+	<li> G++ is a little bit more lenient with certain archaic
+	     constructs than in GCC 2.95.
 	<li> Fix to prevent shared library version #s from bring truncated
 	     to 1 digit
 	<li> Fix missing std:: in the libstdc++ library.
