Rename egcs_update to gcc_update (after GCC 2.95.x). Fix some egcs vs GCC issues.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -855,15 +855,17 @@ bison, and xgettext.</p>
 correct.  This causes problems for generated files as "make" may think
 those generated files are out of date and try to regenerate them.</p>
 
-<p>An easy way to work around this problem is to use the egcs_update
-script in the contrib subdirectory of egcs, which handles this
-transparently without requiring installation of any additional tools.</p>
+<p>An easy way to work around this problem is to use the <CODE>gcc_update
+</CODE> script in the contrib subdirectory of GCC, which handles this
+transparently without requiring installation of any additional tools.
+(Note: Up to and including GCC 2.95 this script was called <CODE>egcs_update
+</CODE>.)</p>
 
 
 <p>When building from diffs or CVS or if you modified some sources,
 you may also need to obtain development versions of some GNU tools, as
 the production versions do not necessarily handle all features needed
-to rebuild egcs.</p>
+to rebuild GCC.</p>
 
 <p>Autoconf is available from
 <a href="http://sourceware.cygnus.com/autoconf/">
@@ -1033,7 +1035,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  August 15, 1999</i></p>
+<p><i>Last modified:  August 16, 1999</i></p>
 
 </body>
 </html>
