*-*-solaris* does not come with a C compiler. Provide location of some pre-built ones.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -22,6 +22,7 @@
   <li><a href="#mips*-sgi-irix[45]">mips*-sgi-irix[45]</a></li>
   <li><a href="#mips*-sgi-irix6">mips*-sgi-irix6</a></li>
   <li><a href="#powerpc-*-linux-gnu*">powerpc-*-linux-gnu*</a></li>
+  <li><a href="#*-*-solaris*">*-*-solaris*</a></li>
   <li><a href="#sparc-sun-solaris2.7">sparc-sun-solaris2.7</a></li>
   <li><a href="#sparc-sun-sunos*">sparc-sun-sunos*</a></li>
   <li><a href="#sparc-unknown-linux-gnulibc1">sparc-unknown-linux-gnulibc1</a></li>
@@ -423,6 +424,15 @@ if you initially built it with gcc-2.7.2.x.</p>
 
 
 <hr>
+<h3><a name="*-*-solaris*">*-*-solaris*</a></h3>
+
+<p>Starting with Solaris, Sun does not ship a C compiler any more. To
+bootstrap and install GCC you first have to install a pre-built
+compiler, for example from <a href="http://www.sunfreeware.com/">
+http://www.sunfreeware.com</a>.</p>
+
+
+<hr>
 <h3><a name="sparc-sun-solaris2.7">sparc-sun-solaris2.7</a></h3>
 
 <p>Sun patch 107058-01 (1999-01-13) for SPARC Solaris 7 triggers a bug in
@@ -436,11 +446,13 @@ yet released it as a patch.</p>
 <hr>
 <h3><a name="sparc-sun-sunos*">sparc-sun-sunos*</a></h3>
 
-<p>A bug in the SunOS4 linker will cause it to crash when linking -fPIC compiled
-objects (and will therefore not allow you to build shared libraries).</p>
+<p>A bug in the SunOS4 linker will cause it to crash when linking
+-fPIC compiled objects (and will therefore not allow you to build
+shared libraries).</p>
 
-<p>To fix this problem you can either use the most recent version of binutils or
-get the latest SunOS4 linker patch (patch ID 100170-10) from Sun's patch site.</p>
+<p>To fix this problem you can either use the most recent version of
+binutils or get the latest SunOS4 linker patch (patch ID 100170-10)
+from Sun's patch site.</p>
 
 
 <hr>
@@ -476,7 +488,7 @@ at <a href="http://www.goof.com/pcg/os2/">http://www.goof.com/pcg/os2/</a>.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
-<p><i>Last modified on August 15, 1999.</i></p>
+<p><i>Last modified on August 17, 1999.</i></p>
 
 </body>
 </html>
