--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -20,6 +20,9 @@ Successful
 <p><b>alphaev56-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>alphaev6-unknown-linux-gnu</b><br>
+Successful
+
 <p><b>hppa1.1-hp-hpux10.20</b><br>
 Successful
 
@@ -100,7 +103,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 12, 1999.</i>
+<i>Last modified on August 16, 1999.</i>
 
 </body>
 </html>
