Another new entry.

--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -77,6 +77,9 @@ Successful
 <p><b>powerpc-ibm-aix4.3.2.0</b><br>
 Successful
 
+<p><b>powerpc-unknown-linux-gnu</b><br>
+Successful
+
 <p><b>rs6000-ibm-aix4.2.1.0</b><br>
 Successful
 
