Really get it right.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -144,7 +144,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
   <li><a href="http://hypatia.dcs.qmw.ac.uk/SEL-HPC/Articles/CompilersArchive.html">Searchable article archive</a>
 
-  <li><a href="http://www.compilerconnection.com/htmls/connections.htm">Links related to many compiler topics</a>
+  <li><a href="http://www.compilerconnection.com/">Links related to many compiler topics</a>
 
   <li><a href="http://www.iecc.com/compilers">Comp.compilers archive</a>
 
