--- a/htdocs/egcstensions.html
+++ b/htdocs/egcstensions.html
@@ -11,7 +11,7 @@ reason or the other, did not (yet) make it into the official source
 tree. Please direct feedback and bugreports to their respective
 maintainers, not our mailing lists.</p>
 
-<h2><a href="http://www.gcc.ml.org/">PentiumGCC</a></h2>
+<h2><a href="http://www.goof.com/pcg/index.html">PentiumGCC</a></h2>
 <p>The PentiumGCC (short PGCC) is an extension of egcs specifically
 aimed at the newer Intel chips and their clones (Pentium, PPro,
 Pentium-II and the Cyrix6x86 and AMD-K6+ chips). The current goal is
