--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -23,6 +23,9 @@ Successful
 <p><b>alphaev6-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>hppa1.1-hp-hpux10.01</b><br>
+Successful
+
 <p><b>hppa1.1-hp-hpux10.20</b><br>
 Successful
 
@@ -106,7 +109,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 16, 1999.</i>
+<i>Last modified on August 17, 1999.</i>
 
 </body>
 </html>
