--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -75,7 +75,7 @@ We want those releases to work well on a variety of native (including
 GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="gcc-2.95/gcc-2.95.html">GCC 2.95</a> is the current release.
+<a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1</a> is the current release.
 <hr>
 
 
@@ -89,6 +89,11 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>August 19, 1999</b></dt>
+<dd>
+<a href="gcc-2.95.1/gcc-2.95.1.html">GCC 2.95.1 is released</a>.
+</dd>
 
 <dt><b>August 4, 1999</b></dt>
 <dd>
@@ -128,7 +133,7 @@ Mumit Khan has
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on August 4, 1999.</i></small>
+<small><i>Last modified on August 19, 1999.</i></small>
 </address>
 
 </body>
