--- a/htdocs/gcc-2.95/gcc-2.95.1.html
+++ b/htdocs/gcc-2.95/gcc-2.95.1.html
@@ -13,13 +13,14 @@ for the GNU Compiler Collection.
 
 <p>This is a minor release to address several bugs in the GCC version 2.95
 release.
+<p>
 <ul>
   <li> Generic bugfixes and improvements
     <ul>
 	<li> Various documentation fixes related to the GCC/EGCS merger.
 	<li> Fix memory management bug which could lead to spurious aborts, core
 	     dumps or random parsing errors in the compiler.
-  	<li> Fix a couple bugs in the dwarf dwarf2 debug record support.
+  	<li> Fix a couple bugs in the dwarf1 and dwarf2 debug record support.
 	<li> Fix infinite loop in the CSE optimizer.
 	<li> Avoid undefined behavior in compiler FP emulation code
 	<li> Fix install problem when prefix is overridden on the make install
