Add alpha*-dec-linux* to TOC. By Niels Kristian Bech Jensen <nkbj@image.dk>.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -9,6 +9,7 @@
 <p>Please read this document carefully <i>before</i> installing the GNU Compiler Collection on your machine.</p>
 
 <ul>
+  <li><a href="#alpha*-dec-linux*">alpha*-dec-linux*</a></li>
   <li><a href="#alpha*-dec-osf*">alpha*-dec-osf*</a></li>
   <li><a href="#hppa*-hp-hpux*">hppa*-hp-hpux*</a></li>
   <li><a href="#hppa*-hp-hpux9">hppa*-hp-hpux9</a></li>
