--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -92,6 +92,9 @@ Successful
 <p><b>rs6000-ibm-aix4.3.2.0</b><br>
 Successful
 
+<p><b>sparc-sun-solaris2.4</b><br>
+Successful
+
 <p><b>sparc-sun-solaris2.5.1</b><br>
 Successful
 
