--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -50,6 +50,9 @@ Successful
 <p><b>i386-pc-sysv4.2uw2.1.3</b><br>
 Successful
 
+<p><b>i386-pc-solaris2.5</b><br>
+Successful
+
 <p><b>i386-pc-solaris2.6</b><br>
 Successful
 
@@ -112,7 +115,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 17, 1999.</i>
+<i>Last modified on August 20, 1999.</i>
 
 </body>
 </html>
