--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -80,6 +80,9 @@ Successful
 <p><b>mips-sgi-irix6.5</b><br>
 Successful
 
+<p><b>mipsel-unknown-linux-gnu</b><br>
+Un-successful.  Needs tweaks to gcc/mips/linux.h
+
 <p><b>powerpc-ibm-aix4.3.2.0</b><br>
 Successful
 
