--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
-<title>EGCS Projects</title>
+<title>GCC Projects</title>
 </head>
 
 <body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
@@ -51,16 +51,7 @@ starting any serious haifa work)
 <p>Improvements to global cse and partial redundancy elimination:
 
 <p>The current implementation of global cse uses partial redundancy
-elimination as described in Chow's thesis.
-
-<p>Long term we want to use lazy code motion as the basis for partial
-redundancy elimination.  lcm will find as many (or more) redundancies
-<i>and</i> it will place the remaining computations at computationally
-optimal placement points within the function.  This reduces the number
-of redundant operations performed as well as reducing register
-lifetimes.  My experiments have shown that the cases were the current
-PRE code hurts performance are greatly helped by using lazy code
-motion.
+elimination via lazy code motion (lcm).
 
 <p>lcm also provides the underlying framework for several additional
 optimizations such as shrink wrapping, spill code motion, dead store
@@ -517,10 +508,10 @@ example:
 <li>  References to the literature for the algorithms used in GCC
 </ol>
 
-<small><i>Last modified May 15, 1999.</i></small>
+<small><i>Last modified August 20, 1999.</i></small>
 
 <hr>
-<p><a href="index.html">Return to the EGCS home page</a>
+<p><a href="index.html">Return to the GCC home page</a>
 
 </body>
 </html>
