--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -114,6 +114,11 @@
 
   <li><a href="http://www.dkuug.dk/JTC1/SC22/WG14/www/docs/n794.htm">C9X draft</a>
 
+  <li><a href="ftp://ftp.ncsa.uiuc.edu/x3j3/doc/standing/007/">F2K draft</a>
+
+  <li><a href="http://www.fortran.com/fortran/F77_std/rjcnf.html">FORTRAN 77
+  Standard</a>
+
   <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a>
 
 <p>
@@ -144,11 +149,15 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
   <li><a href="http://hypatia.dcs.qmw.ac.uk/SEL-HPC/Articles/CompilersArchive.html">Searchable article archive</a>
 
-  <li><a href="http://www.compilerconnection.com/">Links related to many compiler topics</a>
+  <li><a href="http://www.compilerconnection.com/">Links related to many
+  compiler topics</a>
 
   <li><a href="http://www.iecc.com/compilers">Comp.compilers archive</a>
 
   <li><a href="http://reality.sgi.com/employees/austern_mti/std-c++/faq.html">comp.std.c++ FAQ</a>
+
+  <li><a href="http://www.fortran.com/fortran/info.html">Fortran FAQs,
+  books and software</a>
 
   <li><a href="http://www.mkp.com/books_catalog/1-55860-320-4.asp">New compiler book</a>.  Online appendix includes some compiler links.
 
