--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -110,6 +110,9 @@ Successful
 <p><b>sparc-sun-solaris2.7</b><br>
 Successful
 
+<p><b>sparc-sun-sunos4.1.3</b><br>
+Successful
+
 <p><b>sparc-sun-sunos4.1.4</b><br>
 Successful
 
@@ -118,7 +121,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 20, 1999.</i>
+<i>Last modified on August 22, 1999.</i>
 
 </body>
 </html>
