--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -15,6 +15,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
+<li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> 
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
@@ -50,6 +51,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Japan: <a href="ftp://sysg.kek.jp/cygnus/egcs">sysg.kek.jp</a>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs">ftp.eos.hokudai.ac.jp</a>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub">ftp.sun.ac.za</a>
+<li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/egcs/">mirror.aarnet.edu.au</a>
 
 <li>Finland (no snapshots): <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
@@ -82,7 +84,7 @@ where the mirror is located.
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on August 1, 1999.</i>
+<i>Last modified on August 22, 1999.</i>
 
 </body>
 </html>
