--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -77,6 +77,9 @@ Successful
 <p><b>mips-sgi-irix6.2</b><br>
 Successful
 
+<p><b>mips-sgi-irix6.4</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.5</b><br>
 Successful
 
@@ -121,7 +124,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 22, 1999.</i>
+<i>Last modified on August 25, 1999.</i>
 
 </body>
 </html>
