Provide a subscription form to gcc-announce on our main page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,6 +43,20 @@
 <A HREF="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">Snapshots</A><BR>
 <A HREF="mirrors.html">Mirror sites</A>
 </P>
+
+<HR>
+
+<P><SMALL>
+<FORM METHOD="get" ACTION="http://egcs.cygnus.com/cgi-bin/ml-request">
+  Get our announcements:
+  <INPUT TYPE="hidden" NAME="digest"    VALUE="off">
+  <INPUT TYPE="hidden" NAME="operation" VALUE="subscribe">
+  <INPUT TYPE="hidden" NAME="listname"  VALUE="gcc-announce">
+  <INPUT TYPE="text"   NAME="username"  VALUE="your e-mail address" size="20">
+  <INPUT TYPE="Submit" NAME="submit"    VALUE="Subscribe!">
+</FORM>
+</SMALL></P>
+
 </TD>
 
 <TD BGCOLOR="white" VALIGN="top">
@@ -133,7 +147,7 @@ Mumit Khan has
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on August 19, 1999.</i></small>
+<small><i>Last modified on August 26, 1999.</i></small>
 </address>
 
 </body>
