--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -2,14 +2,19 @@
 <head>
 <title>Installing GCC: Building</title>
 </head>
+
 <body>
 <h1 align="center">Installing GCC: Building</h1>
 
 <p>Now that GCC is configured, you are ready to build the compiler and
 runtime libraries.
 
-<p>We <b>highly</b> recommend that GCC be built using GNU make; other
-versions may work, then again they might not.  To be safe build with GNU make.
+<p>We <strong>highly</strong> recommend that GCC be built using GNU make;
+other versions may work, then again they might not.</p>
+
+<p>(For example, many broken versions of make will fail if you use the
+recommended setup where <i>objdir</i> is different from <i>srcdir</i>.)
+
 
 <h2>Building a native compiler</h2>
 
@@ -18,14 +23,14 @@ will build the entire GCC system, which includes the following steps:
 
 <ul>
   <li> Build host tools necessary to build the compiler such as texinfo, bison,
-  gperf.<p>
+  gperf.
 
   <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils if they have been properly unpacked into the GCC source tree.<p>
+  binutils if they have been properly unpacked into the GCC source tree.
 
-  <li> Perform a 3-stage bootstrap of the compiler.<p>
+  <li> Perform a 3-stage bootstrap of the compiler.
 
-  <li> Perform a comparison test of the stage2 and stage3 compilers.<p>
+  <li> Perform a comparison test of the stage2 and stage3 compilers.
 
   <li> Build runtime libraries using the stage3 compiler from the previous
   step.
@@ -50,6 +55,7 @@ built. This will of course only build those runtime libraries, for
 which the particular compiler has been built.  Please note,
 that re-defining LANGUAGES when calling `<code>make bootstrap</code>'
 <b>*does not*</b> work anymore!
+
 
 <h2>Building a cross compiler</h2>
 
@@ -93,7 +99,7 @@ the number of processors in your machine.
 
 <p>
 <hr>
-<i>Last modified on July 16, 1999.</i>
+<i>Last modified on August 27, 1999.</i>
 
 </body>
 </html>
